2001-10-09  Larry Ewing  <lewing@ximian.com>

	* htmltextslave.c (get_offset_for_bounded_width): remove redundant
	calls to html_text_get_text since it is actually expensive.

2001-10-08  Larry Ewing  <lewing@ximian.com>

	* htmlselect.c (html_select_add_option): don't add static strings
	to a list that we free all the items in.  Also some formatting
	changes in random places.  Fixes Ximian #8629

2001-10-08  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_api_set_language): new helper private
	function, used to set language thru editor API
	(gtk_html_set_editor_api): set language
	(client_notify_widget): set language
	(client_notify_widget): recheck spelling

	* gtkhtml.h (struct _GtkHTMLEditorAPI): added set_language method

	* htmlengine.c (html_engine_get_word): utf8-ize this function

2001-10-06  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_set_url): call register with reload set
	to false.

2001-10-05  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-stream.c (gtk_html_stream_vprintf): fix the limiting
	code.

2001-10-05  Radek Doulik  <rodo@ximian.com>

	* htmlimage.c (html_image_factory_end_pixbuf): call
	gdk_pixbuf_loader_close and get pixbuf from loader if we don't
	have it yet
	(html_image_edit_set_url): renamed from html_image_set_url, editor
	will use this one
	(html_image_set_url): reincarnate old one
	(free_image_ptr_data): new helper function
	(html_image_pointer_unref): use free_image_ptr_data
	(html_image_factory_register): ditto, fixed reload
	(html_image_set_url): call html_image_factory_register with reaload TRUE

2001-10-03  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-stream.c (gtk_html_stream_vprintf): limit the potential
	alloca size so that bad things are less likely to happen.

2001-10-01  Larry Ewing  <lewing@ximian.com>

	* htmlsearch.c (html_search_new): silence warnings for unused
	variables.

	* gtkhtml-stream.c: add stdlib.h include.

	* htmlsearch.c (html_search_new): handle the nongnu regex case